[gd_scene load_steps=7 format=3 uid="uid://x2ea6qh76rt5"]

[ext_resource type="Script" path="res://Roulette/roulette.gd" id="1_jclcb"]
[ext_resource type="PackedScene" uid="uid://qo1c7alxl6x8" path="res://drag_and_drop.tscn" id="3_nwqvl"]
[ext_resource type="Texture2D" uid="uid://h4ep1wpurfs2" path="res://Roulette/Assets/roulette-finish-blowup.png" id="4_84dsl"]
[ext_resource type="Texture2D" uid="uid://dqsfi5wmvdu65" path="res://Roulette/Assets/scuffedchip.png" id="4_mlrrn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1b68"]
size = Vector2(68, 69)

[sub_resource type="SystemFont" id="SystemFont_7yg5c"]
font_names = PackedStringArray("Comic Sans MS")

[node name="Roulette" type="Node2D"]
script = ExtResource("1_jclcb")

[node name="BettingNodes" type="Node2D" parent="."]

[node name="BetNum3" type="Area2D" parent="BettingNodes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BettingNodes/BetNum3"]
position = Vector2(133, 157.5)
shape = SubResource("RectangleShape2D_k1b68")

[node name="TextureRect" parent="." instance=ExtResource("3_nwqvl")]
visible = false
top_level = true
offset_left = 121.0
offset_top = 138.0
offset_right = 161.0
offset_bottom = 178.0

[node name="TextureRect2" parent="." instance=ExtResource("3_nwqvl")]
top_level = true
offset_left = 139.0
offset_top = 570.0
offset_right = 179.0
offset_bottom = 610.0
texture = ExtResource("4_mlrrn")

[node name="TextureRect3" parent="." instance=ExtResource("3_nwqvl")]
top_level = true
offset_left = 239.0
offset_top = 571.0
offset_right = 279.0
offset_bottom = 611.0
texture = ExtResource("4_mlrrn")

[node name="Label" type="Label" parent="."]
offset_left = 709.0
offset_top = 13.0
offset_right = 1437.0
offset_bottom = 221.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = SubResource("SystemFont_7yg5c")
theme_override_font_sizes/font_size = 64
text = "Placeholder
"

[node name="CannotBet" type="Label" parent="."]
visible = false
offset_left = 11.0
offset_top = 7.0
offset_right = 486.0
offset_bottom = 97.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = SubResource("SystemFont_7yg5c")
theme_override_font_sizes/font_size = 32
text = "Placeholder
"

[node name="Roulette-finish-blowup" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(573, 318)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_84dsl")

[node name="Timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="BettingNodes/BetNum3" to="." method="_on_bet_num_3_mouse_entered"]
[connection signal="mouse_exited" from="BettingNodes/BetNum3" to="." method="_on_bet_num_3_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect2" to="." method="_on_texture_rect_2_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect2" to="." method="_on_texture_rect_2_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect3" to="." method="_on_texture_rect_3_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect3" to="." method="_on_texture_rect_3_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
